[package]
name = "fractals"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "tree"
path = "src/pythagoras_tree.rs"

[[bin]]
name = "curve"
path = "src/koch_curve.rs"

[[bin]]
name = "triangle"
path = "src/sierpinski_triangle.rs"

[[bin]]
name = "clouds"
path = "src/clouds.rs"

[dependencies]
nannou = "0.19.0"
rand = "0.8.5"
